# dev_helper

./: .gitignore  README.md  gitxxx.py  main.py
autocommit/: auto_commit.py  pyproject.toml
autodev/: MAKEFILE  README.md  autodev.sh
open-project/: Cargo.toml  Makefile  README.md
open-project/src/: main.rs
openapi2go/: README.md  go.mod  go.sum  index.html  main.go
openapi2go/template/: adapter_module.tmpl  controller_module.tmpl  perm_code.tmpl  router_module.tmpl  service_module.tmpl
sql2gostruct/: README.md  go.mod  go.sum  main.go  main_test.go
sql2gostruct/antlr4/: CreateParser.g4  MySqlLexer.g4  MySqlParser.g4
sql2gostruct/consts/: consts.go
sql2gostruct/ddl/: api.go  create_listener.go  create_table.go  create_table_adaptor_antlr.go  error_listener.go
sql2gostruct/parser/: CreateParser.interp  CreateParser.tokens  MySqlLexer.interp  MySqlLexer.tokens  MySqlParser.interp  MySqlParser.tokens  create_parser.go  createparser_base_listener.go  createparser_listener.go  mysql_lexer.go  mysqlparser_listener.go
sql2gostruct/static/: ddl_create_table.gtpl  show_go_struct.gtpl
sql2gostruct/template/: main.go
sql2gostruct/web/: index.html  main.go
sql2openapi/: MySqlLexer.g4  README.md  create_table_listener.go  error_listener.go  go.mod  index.html  main.go  schema.json
sql2openapi/consts/: consts.go
sql2openapi/parser/: MySqlLexer.interp  mysql_lexer.go  mysql_parser.go  mysqlparser_base_listener.go
